# const_soft_float

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
fuzz/: Cargo.toml
fuzz/src/: compiler_builtins.rs  f32_fuzz.rs  f64_fuzz.rs  lib.rs
src/: lib.rs
src/soft_f32/: add.rs  cmp.rs  const_impl_trait.rs  copysign.rs  cos.rs  div.rs  floor.rs  impl_trait.rs  mod.rs  mul.rs  pow.rs  round.rs  sin.rs  sqrt.rs  trunc.rs
src/soft_f32/helpers/: k_cosf.rs  k_sinf.rs  mod.rs  rem_pio2f.rs
src/soft_f64/: add.rs  cmp.rs  const_impl_trait.rs  copysign.rs  cos.rs  div.rs  exp.rs  floor.rs  impl_trait.rs  log.rs  mod.rs  mul.rs  pow.rs  round.rs  sin.rs  sqrt.rs  trunc.rs
src/soft_f64/helpers/: cmp.rs  k_cos.rs  k_sin.rs  mod.rs  rem_pio2.rs  rem_pio2_large.rs  scalbn.rs
