[package]
name = "const_soft_float"
version = "0.1.3"
edition = "2021"
description = "Const Soft Float Point"
keywords = ["const", "soft", "float-point"]
categories = ["no-std"]
repository = "https://github.com/823984418/const_soft_float"
license = "MIT OR Apache-2.0"

[dependencies]

[dev-dependencies]
cfg-if = "1"

[features]
no_std = []
const_trait_impl = []
const_mut_refs = []

[dev-dependencies]
libm = "0.2.6"
